--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<body>
+		<div class = "module">
+			<img src = "https://media.discordapp.net/attachments/1007632534672253011/1007632714595307530/icon_circle.png"/>
+		</div>
+	
+		<h1>Hello World</h1>
+		<p>I'm hosted with GitHub Pages.</p>
+	</body>
 </html>
