--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html>
-	<body>
-		<div class = "module">
-			<img src = "https://media.discordapp.net/attachments/1007632534672253011/1007632714595307530/icon_circle.png"/>
-		</div>
-	
-		<h1>Hello World</h1>
-		<p>I'm hosted with GitHub Pages.</p>
-	</body>
+
+<body>
+
+    <link rel="stylesheet" type="text/css" href="https://valonvn.github.io/style.css">
+
+    <div class="logo">
+        <img width=200px 50px src="https://cdn.discordapp.com/attachments/1007632534672253011/1007654602310688788/icon_circle.png" />
+
+    </div>
+
+    <div>
+        <h1>Valon</h1>
+    </div>
+
+    <div class="links">
+
+
+
+        <div class="link">
+            <a href="https://www.twitch.tv/valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649772947128380/twitch.png" alt="HTML tutorial" style="width:42px;height:42px;"></a>
+        </div>
+        <div class="link">
+            <a href="https://www.tiktok.com/@valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649772477370449/tiktok.png" alt="HTML tutorial" style="width:42px;height:42px;"></a>
+        </div>
+        <div class="link">
+            <a href="https://twitter.com/valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649773345570816/twitter.png" alt="HTML tutorial" style="width:42px;height:42px;"></a>
+        </div>
+
+    </div>
+
+</body>
+
 </html>
