--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="https://valonvn.github.io/style.css">
 
     <div class="logo">
-        <img width=200px 50px src="https://cdn.discordapp.com/attachments/1007632534672253011/1007654602310688788/icon_circle.png" />
+        <img width = 15% src="https://cdn.discordapp.com/attachments/1007632534672253011/1007654602310688788/icon_circle.png"/>
 
     </div>
 
@@ -19,13 +19,13 @@
 
 
         <div class="link">
-            <a href="https://www.twitch.tv/valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649772947128380/twitch.png" alt="HTML tutorial" style="width:42px;height:42px;"></a>
+            <a href="https://www.twitch.tv/valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649772947128380/twitch.png" alt="HTML tutorial"</a>
         </div>
         <div class="link">
-            <a href="https://www.tiktok.com/@valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649772477370449/tiktok.png" alt="HTML tutorial" style="width:42px;height:42px;"></a>
+            <a href="https://www.tiktok.com/@valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649772477370449/tiktok.png" alt="HTML tutorial"</a>
         </div>
         <div class="link">
-            <a href="https://twitter.com/valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649773345570816/twitter.png" alt="HTML tutorial" style="width:42px;height:42px;"></a>
+            <a href="https://twitter.com/valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649773345570816/twitter.png" alt="HTML tutorial"</a>
         </div>
 
     </div>
