--- a/index.html
+++ b/index.html
@@ -5,31 +5,21 @@
 
     <link rel="stylesheet" type="text/css" href="https://valonvn.github.io/style.css">
 
-    <div class="logo">
-        <img width = 15% src="https://cdn.discordapp.com/attachments/1007632534672253011/1007654602310688788/icon_circle.png"/>
+    <div class = "module">
+        <div class="logo">
+            <img width=15% src="https://cdn.discordapp.com/attachments/1007632534672253011/1007654602310688788/icon_circle.png" />
 
-    </div>
-
-    <div>
-        <h1>Valon</h1>
-    </div>
-
-    <div class="links">
-
-
-
-        <div class="link">
-            <a href="https://www.twitch.tv/valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649772947128380/twitch.png" alt="HTML tutorial"</a>
-        </div>
-        <div class="link">
-            <a href="https://www.tiktok.com/@valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649772477370449/tiktok.png" alt="HTML tutorial"</a>
-        </div>
-        <div class="link">
-            <a href="https://twitter.com/valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649773345570816/twitter.png" alt="HTML tutorial"</a>
         </div>
 
-    </div>
+        <div>
+            <h1>Valon</h1>
+        </div>
 
-</body>
+        <div class="links">
 
-</html>
+
+
+            <div class="link">
+                <a href="https://www.twitch.tv/valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649772947128380/twitch.png" alt="HTML tutorial" </a> </div> <div class="link">
+                    <a href="https://www.tiktok.com/@valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649772477370449/tiktok.png" alt="HTML tutorial" </a> </div> <div class="link">
+                        <a href="https://twitter.com/valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649773345570816/twitter.png" alt="HTML tutorial" </a> </div> </div> </div> </body> </html>
