--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 
 
             <div class="link">
-                <a href="https://www.twitch.tv/valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649772947128380/twitch.png" alt="HTML tutorial" </a> </div> <div class="link">
-                    <a href="https://www.tiktok.com/@valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649772477370449/tiktok.png" alt="HTML tutorial" </a> </div> <div class="link">
+                <a href="https://www.twitch.tv/valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649772947128380/twitch.png" alt="HTML tutorial" </a> </div> 
+              <br/>
+              <div class="link">
+                    <a href="https://www.tiktok.com/@valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649772477370449/tiktok.png" alt="HTML tutorial" </a> </div> 
+             
+                <br/>
+                
+                <div class="link">
                         <a href="https://twitter.com/valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649773345570816/twitter.png" alt="HTML tutorial" </a> </div> </div> </div> </body> </html>
