--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <body>
 
     <link rel="stylesheet" type="text/css" href="https://valonvn.github.io/style.css">
-	<meta name = "viewport" content = "width = device-width, initial-scale = 1">
-
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" name="viewport">
+  
     <div class="module">
         <div class="logo">
             <img width=15% src="https://cdn.discordapp.com/attachments/1007632534672253011/1007654602310688788/icon_circle.png" />
@@ -21,6 +21,12 @@
 
 
             <div class="link">
-                <a href="https://www.twitch.tv/valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649772947128380/twitch.png" alt="HTML tutorial" </a> </div> <div class="link">
-                    <a href="https://www.tiktok.com/@valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649772477370449/tiktok.png" alt="HTML tutorial" </a> </div> <div class="link">
+                <a href="https://www.twitch.tv/valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649772947128380/twitch.png" alt="HTML tutorial" </a> </div> 
+              <br/>
+              <div class="link">
+                    <a href="https://www.tiktok.com/@valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649772477370449/tiktok.png" alt="HTML tutorial" </a> </div> 
+             
+                <br/>
+                
+                <div class="link">
                         <a href="https://twitter.com/valonvn"><img src="https://cdn.discordapp.com/attachments/1007632534672253011/1007649773345570816/twitter.png" alt="HTML tutorial" </a> </div> </div> </div> </body> </html>
