--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 
     <link rel="stylesheet" type="text/css" href="https://valonvn.github.io/style.css">
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" name="viewport">
+    <meta name="viewport" content="width=1280, initial-scale=1">
   
     <div class="module">
         <div class="logo">
