--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE html
 <html>
 
 <body>
 
     <link rel="stylesheet" type="text/css" href="https://valonvn.github.io/style.css">
-    <meta name="viewport" content="width=1280, initial-scale=1">
+    
   
     <div class="module">
         <div class="logo">
