--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <body>
 
-    <link rel="stylesheet" type="text/css" href="https://valonvn.github.io/style.css">
-    
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   
     <div class="module">
         <div class="logo">
