--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   
     <div class="logo">
-      <img width=15% src="https://cdn.discordapp.com/attachments/1007632534672253011/1007654602310688788/icon_circle.png"/>
+      <img width=180px src="https://cdn.discordapp.com/attachments/1007632534672253011/1007654602310688788/icon_circle.png"/>
     </div>
     
     
