--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <body>
 
+	<link rel="stylesheet" type="text/css" href="https://valonvn.github.io/style.css">
+
     <h1 class = "title">Available Sounds</h1>
     <p class = "description">Here are a list of available sounds for both the traditional and subscribed community!</p>
 
