--- a/index.html
+++ b/index.html
@@ -1,26 +1,77 @@
-<!DOCTYPE html>
-<html>
-  <body>
+<html style="background-color: transparent;"><head>
+        <title>Chat Box Widget</title>
+                <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet">
+        <script async="" src="//www.google-analytics.com/analytics.js"></script><script src="https://cdn.polyfill.io/v2/polyfill.min.js?unknown=polyfill&amp;features=es6|gated|always"></script>
+        <script src="/mixed/assets/vendor/js/manifest.js?id=7db827d654313dce4250"></script>
+        <script src="/mixed/assets/vendor/js/vendor.js?id=29aa3b9c8276afdb502a"></script>
+        <script src="/mixed/assets/external/js/external.js?id=f16e000913c60a7e7a6f"></script>
+        <style id="theme">@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap');
 
-	<link rel="stylesheet" type="text/css" href="https://valonvn.github.io/style.css">
 
-    <h1 class = "title">Available Sounds</h1>
-    <p class = "description">Here are a list of available sounds for both the traditional and subscribed community!</p>
+</style>
 
-    <h1 class = "title">Traditional</h1>
-    <p class = "sound">!okay</p>
-    <p class = "sound">!fired</p>
-    <p class = "sound">!howyoudoin</p>
-    <p class = "sound">!notright</p>
+        <script>
+            //function stubs for xsplit beta
+            window.SetVolume           = function() {};
+            window.OnSceneLoad         = function() {};
+            window.setBackGroundColor  = function() {};
+            window.GetPlayState        = function() {};
+            window.UpdateLocalProperty = function() {};
+            window.SetEvent            = function() {};
+        </script>
+    </head>
+
+    <body style="margin: 0px; background-color: transparent;">
+        <input type="hidden" id="app_url" value="https://streamlabs.com">
+
+            <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+
+    <iframe sandbox="allow-scripts" frameborder="0" style="width:100%;height:100%;" seamless="true" src="/widgets/frame/chatbox/custom?type=desktop" id="sl_frame"></iframe>
+
+
+    <div id="custom_html">
+    <div id="log" class="sl__chat__layout">
+    </div>
+    <script type="text/template" id="chatlist_item">
+        <div data-from="{from}" data-id="{messageId}">
+        <span class="meta" style="color: {color}">
+            <span class="badges"></span>
+            <span class="name">{from}</span>
+        </span>
+
+        <span class="message">
+            {message}
+        </span>
+        </div>
+    </script>
+
+    <script type="text/template" id="badge_item">
+        <img src="{src}" class="badge {type}-icon" />
+    </script>
+</div>
+    <input type="hidden" id="simulate" value="">
+    <input type="hidden" id="speed" value="">
+    <script src="/dist/vendor.min.js?v=1"></script>
+    <script src="/mixed/assets/widgets/js/chatbox.js?id=2b536a843da9ed720ec6"></script>
+
+
+        <input type="hidden" id="token" value="81138CE069552D2FAAD63CF7060053BB209C4D82DC41FA4393259B3BF3559307455C0012BBC0FD6B967F5AD4CE9ACD1359C8D7E8E1DAC3D502CE77849B4BC916F2AFD361B41DC5D0143E6F85C327443FA7B31BCA85AE9D3734FDBA7758D0357549CF60B23B5C755C0AD21023FBFDCAFE9C0E80713BBA6FEF84EBFA76CA">
+                <input type="hidden" id="profile" value="">
+        <input type="hidden" id="additionalParams" value="{&quot;studio_theme_id&quot;:null}">
+
+        <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.3/webfont.js"></script>
+
+        <!-- include Google analytics -->
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-52139786-2', 'auto');
+            ga('send', 'pageview');
+        </script>
     
-    <h1 class = "title2">Subscribed</h1>
-    <p class = "sound">!wtf</p>
-    <p class = "sound">!twohours</p>
-    <p class = "sound">!wow</p>
-    <p class = "sound">!bigbrain</p>
-    <p class = "sound">!nonono</p>
-    <p class = "sound">!prettygood</p>
-    <p class = "sound">!tada</p>
-    
-  </body> 
-</html>
+
+<g-ext-in></g-ext-in></body></html>
